[gd_scene load_steps=5 format=2]

[ext_resource path="res://Module/ModuleScript/DigitalNumberScreen4.gd" type="Script" id=1]
[ext_resource path="res://Pin/Pin.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/DigitalNumberScreen4.png" type="Texture" id=3]
[ext_resource path="res://Assets/DigitalNumber/DigitalNumber.tscn" type="PackedScene" id=4]


[node name="DigitalNumberScreen4" type="Node2D"]
script = ExtResource( 1 )

[node name="Pin_Number" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 32 )
rotation = -1.5708

[node name="DigitalNumberScreen4" type="Sprite" parent="."]
editor/display_folded = true
texture = ExtResource( 3 )
centered = false

[node name="DigitalNumber0" parent="DigitalNumberScreen4" instance=ExtResource( 4 )]
position = Vector2( 95, 21 )

[node name="DigitalNumber1" parent="DigitalNumberScreen4" instance=ExtResource( 4 )]
position = Vector2( 72, 21 )

[node name="DigitalNumber2" parent="DigitalNumberScreen4" instance=ExtResource( 4 )]
position = Vector2( 49, 21 )

[node name="DigitalNumber3" parent="DigitalNumberScreen4" instance=ExtResource( 4 )]
position = Vector2( 26, 21 )
rotation = -0.000713072
